<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="5dp"
    android:elevation="5dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            app:fontFamily="@font/comfortaa_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Название настроек" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMaxSumValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:fontFamily="@font/comfortaa_bold"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            tools:text="@string/tv_max_sum_value" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMinCountOfRightAnswers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:fontFamily="@font/comfortaa_bold"
            app:layout_constraintTop_toBottomOf="@+id/tvMaxSumValue"
            tools:text="@string/tv_min_count_of_right_answers" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMinPercentOfRightAnswers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:fontFamily="@font/comfortaa_bold"
            app:layout_constraintTop_toBottomOf="@+id/tvMinCountOfRightAnswers"
            tools:text="@string/tv_min_percent_of_right_answers" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvGameTimeInSeconds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:fontFamily="@font/comfortaa_bold"
            app:layout_constraintTop_toBottomOf="@+id/tvMinPercentOfRightAnswers"
            tools:text="@string/tv_game_time_in_seconds" />

        <Button
            android:id="@+id/buttonCustomSettings"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_level_height"
            android:backgroundTint="@color/button_green"
            android:text="@string/button_start_game"
            android:textColor="@color/white"
            app:fontFamily="@font/comfortaa_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvGameTimeInSeconds" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>